@@ -1,9 +1,10 @@
 package com.higgs.server.web.socket;
 
+import com.higgs.common.kafka.HAKafkaConstants;
+import com.higgs.common.kafka.KafkaTopicEnum;
+import com.higgs.common.kafka.ServerProducer;
 import com.higgs.server.db.entity.Node;
 import com.higgs.server.db.repo.NodeRepository;
-import com.higgs.server.kafka.HAKafkaProducer;
-import com.higgs.server.kafka.producer.KafkaTopicEnum;
 import com.higgs.server.web.dto.ActionRequest;
 import com.higgs.server.web.rest.util.RestUtils;
 import lombok.AllArgsConstructor;
@@ -15,7 +16,6 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Controller;
 
 import java.security.Principal;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -26,7 +26,7 @@ import java.util.stream.Stream;
 @Controller
 @AllArgsConstructor
 public class NodeSocket {
-    private final HAKafkaProducer producer;
+    private final ServerProducer producer;
     private final RestUtils restUtils;
     private final NodeRepository nodeRepository;
 
@@ -38,11 +38,16 @@ public class NodeSocket {
         }
         // ensure that the authentication principal provided has authorization to both relevant nodes
         this.validatePrincipalForNodes(principal, Stream.of(message.getFromNodeSeq(), message.getFromNodeSeq()).filter(Objects::nonNull).collect(Collectors.toList()));
-        this.producer.send(KafkaTopicEnum.NODE_MESSAGE, message, this.buildHeaderMap(message));
+        this.producer.send(KafkaTopicEnum.NODE_ACTION, message, this.buildHeaderMap(message));
     }
 
     private Map<String, Object> buildHeaderMap(@NonNull final ActionRequest message) {
-        return Collections.singletonMap("action_handler_def", message.getActionWithParams().getActionHandler());
+        return Map.of(
+                HAKafkaConstants.HEADER_ACTION_HANDLER_DEF, message.getActionWithParams().getActionHandler().getDefinition(),
+                HAKafkaConstants.HEADER_RECEIVING_NODE_SEQ, message.getToNodeSeq(),
+                HAKafkaConstants.HEADER_SENDING_NODE_SEQ, message.getFromNodeSeq(),
+                HAKafkaConstants.HEADER_SENDING_USER_NAME, message.getUsername()
+        );
     }
 
     private void validatePrincipalForNodes(final Principal principal, final List<Long> nodeSeqs) {
